Estilos y mejoras visuales aplicados

--- a/index.html
+++ b/index.html
@@ -4,16 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Práctica Formativa Obligatoria Nº1</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+
+        .container {
+            background-color: #fff;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 30px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        h1 {
+            color: #2c3e50;
+            text-align: center;
+        }
+
+        h2 {
+            color: #34495e;
+            text-align: center;
+        }
+
+        h3 {
+            margin-top: 40px;
+            color: #2c3e50;
+        }
+
+        ul {
+            list-style-type: square;
+            padding-left: 20px;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Práctica Formativa Obligatoria Nº1</h1>
-    <h2>Materia: Seminario de Actualización DevOps</h2>
-    <h3>Integrantes:</h3>
-    <ul>
-        <li>Acosta, María Lis</li>
-        <li>Barrios, Dante</li>
-        <li>Carmona, Eliana</li>
-        <li>Marcori, Jonathan</li>
-    </ul>
+    <div class="container">
+        <h1>Práctica Formativa Obligatoria Nº1</h1>
+        <h2>Materia: Seminario de Actualización DevOps</h2>
+        <h3>Integrantes:</h3>
+        <ul>
+            <li>Acosta, María Lis</li>
+            <li>Barrios, Dante</li>
+            <li>Carmona, Eliana</li>
+            <li>Marcori, Jonathan</li>
+        </ul>
+    </div>
 </body>
 </html>
