Cambios en index.html para simular conflicto

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h3>Integrantes:</h3>
     <ul>
         <li>Acosta, María Lis</li>
-        <li>Barrios, Dante</li>
+        <li>Barrios, Dante Damian</li>
         <li>Carmona, Eliana</li>
         <li>Marcori, Jonathan</li>
     </ul>
