Cambios en index.html id en integrante

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li>Acosta, María Lis</li>
         <li>Barrios, Dante</li>
         <li>Carmona, Eliana</li>
-        <li>Marcori, Jonathan</li>
+        <li id="jonathan-marcori">Marcori, Jonathan</li>
     </ul>
 </body>
 </html>
