Cambios estructurales (conflicto simulado)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <div class="container">
         <h1>Práctica Formativa Obligatoria Nº1</h1>
-        <h2>Materia: Seminario de Actualización DevOps</h2>
+        <h2>IFTS 29 - Comisión A</h2>
         <h3>Integrantes:</h3>
         <ul>
             <li>Acosta, María Lis</li>
