Cambios estructurales (conflicto simulado)

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>IFTS 29 - Comisión A</h2>
         <h3>Integrantes:</h3>
         <ul>
-            <li>Acosta, María Lis</li>
+            <li id:Lis>Acosta, María Lis</li>
             <li>Barrios, Dante</li>
             <li>Carmona, Eliana</li>
             <li>Marcori, Jonathan</li>
