--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
         <li>Acosta, María Lis</li>
         <li>Barrios, Dante</li>
-        <li>Carmona, Eli</li>
+        <li id="Eli">Carmona, Eli</li>
         <li>Marcori, Jonathan</li>
     </ul>
 
